backend/charts/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
    spec:
      containers:
        - name: api
          image: nfire2103/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 512M
              cpu: 100m
            limits:
              memory: 1024M
              cpu: 500m
          volumeMounts:
            - name: kubeconfig
              mountPath: /root/.kube
      volumes:
        - name: kubeconfig
          secret:
            secretName: kubeconfig
